<resources>
    <string name="app_name">WeightWatch</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Login</string>
    <string name="create_account">Create Account</string>
    <string name="logo">Logo</string>
    <string name="weight_watch">WeightWatch</string>
    <string name="scale">scale</string>
    <string name="enter_your_weight">Enter your weight</string>
    <string name="submit">Submit</string>
    <string name="daily_weight">Daily Weight</string>
    <string name="weight_pound">weight pound</string>
    <string name="scalebathroom">scaleBathroom</string>
    <string name="goal_weight">Goal Weight</string>
    <string name="enter_your_goal_weight">Enter your goal weight</string>
    <string name="title_weight_display">Weight Display</string>
    <string name="delete_weight">Delete Weight</string>
    <string name="date">Date</string>
    <string name="weight_lbs">Weight (lbs)</string>
    <string name="enter_date">Enter Date</string>
    <string name="daily_weight_by_date">Daily Weight by Date</string>
    <string name="update_goal_weight">Update Goal Weight</string>
    <string name="weightwatch_would_like_to_send_you_notifications">WeightWatch would like to send you notifications!</string>
    <string name="grant_sms_permission">Grant SMS Permission</string>
    <string name="alert_icon">Alert Icon</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="delete_goal_weight">Delete Goal Weight</string>
    <string name="delete">Delete</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="delete_account">Delete Account</string>
</resources>