<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dailyWeight">

    <fragment
        android:id="@+id/navigation_dailyWeight"
        android:name="com.weightwatch.activity.DailyWeightScreen"
        android:label="@string/daily_weight"
        tools:layout="@layout/fragment_daily_weight" />

    <fragment
        android:id="@+id/navigation_goalWeight"
        android:name="com.weightwatch.activity.GoalWeightScreen"
        android:label="@string/goal_weight"
        tools:layout="@layout/fragment_goal_weight" />

    <fragment
        android:id="@+id/navigation_weightDisplay"
        android:name="com.weightwatch.activity.WeightDisplayScreen"
        android:label="@string/title_weight_display"
        tools:layout="@layout/fragment_weight_display" />
</navigation>
